css/app.css
*{
  font-family: 'Roboto', sans-serif;
}

img{
  width: 100%;
}


:root{
  --darkblue:#051E34;
  --lightblue:#1B72E8;
}


ul,
li {
  list-style: none;
  padding: 0;
}

a{
  text-decoration: none;
  color: currentColor;
}


body{
  height: 100vh;
}

header{
  width: 100%;
  height: 70px;
  background-color: grey;
}

.navbar-vertical{
  background-color: var(--darkblue);
  width: 150px;
  overflow: hidden;
  height: 100vh;
  color: white;
}

.content{
  background-color: bisque;
  flex-grow: 1;
  overflow-y: auto;
}

main{
  overflow: hidden;
  min-height: 100px;
}


/* .container-header {
  min-height: 70px;
  background-color: grey;
  height: 70px;
  color: white;
  width: 100vw;
} */
/* 
.navbar {
  background-color: var(--black);
  width: 230px;
  flex-shrink: 0;
  display: flex;
  overflow: hidden;
} */


div[class^="col-"] {
  border: 2px solid salmon; */
  min-height: 20px;
  padding: 30px;
}

.bluebar{
  background-color: var(--lightblue);
  min-height: 100px;
}


.col-sx{
  min-height: 700px;
}

.col-dx{
  min-height: 400px;
}

.card-classi{
  border: 2px solid black;
  min-height: 540px;
}

.card-faq{
  border: 2px solid black;
  min-height: 250px;
}

.card-todo{
  border: 2px solid black;
  min-height: 200px;
}

.card-grafico{
  border: 2px solid black;
  min-height: 650px;
}

